# paretos

./: .env.example  .gitignore  README.md  UI-prompt.md  ai_strategy_report.md  analysis.py  analysis_notebook.ipynb  analysis_report.md  audit.py  build_database.py  debug_trace.py  learning.md  paretos.db  pipeline_output.txt  pyproject.toml  run_marketplace.py  run_pipeline.py
.windsurf/plans/: architecture_plan.md
data/: cost_model.json  decision_log.json
data-1/: decision_log.json
data-1/actuals/: present_2027-05-17.csv  present_2027-05-24.csv  present_2027-05-31.csv  present_2027-06-07.csv  present_2027-06-14.csv  present_2027-06-21.csv  present_2027-06-28.csv  present_2027-07-05.csv  present_2027-07-12.csv  present_2027-07-19.csv  present_2027-07-26.csv  present_2027-08-02.csv  present_2027-08-09.csv  present_2027-08-16.csv  present_2027-08-23.csv  present_2027-08-30.csv  present_2027-09-06.csv  present_2027-09-13.csv  present_2027-09-20.csv  present_2027-09-27.csv  volumes_2027-05-17.csv  volumes_2027-05-24.csv  volumes_2027-05-31.csv  volumes_2027-06-07.csv  volumes_2027-06-14.csv  volumes_2027-06-21.csv  volumes_2027-06-28.csv  volumes_2027-07-05.csv  volumes_2027-07-12.csv  volumes_2027-07-19.csv  volumes_2027-07-26.csv  volumes_2027-08-02.csv  volumes_2027-08-09.csv  volumes_2027-08-16.csv  volumes_2027-08-23.csv  volumes_2027-08-30.csv  volumes_2027-09-06.csv  volumes_2027-09-13.csv  volumes_2027-09-20.csv  volumes_2027-09-27.csv
tests/: conftest.py  test_backtest.py  test_corrections.py  test_cost_model.py  test_data_loader.py
(+121 files in other folders)
